<resources>
    <string-array name="countries">
        <item>Select country</item>
        <item>Bulgaria</item>
        <item>Germany</item>
        <item>Netherlands</item>

    </string-array>


    <string name="app_name">ContactsApp</string>
    <string name="add_first_contact">Create your first contact</string>
    <string name="new_contact">Create new contact</string>
    <string name="first_name">Enter Firts name</string>
    <string name="last_name">Enter Last name</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="enter_email">Enter your email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="contact_name">ContactName</string>
    <string name="save">Save Contact</string>
    <string name="confirm_dialog">Do you want to delete this contact?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="name">"Name: "</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="check_first_name_last_name">Enter First Name and/or Last Name</string>
    <string name="check_phone_number">Enter a valid number</string>
    <string name="check_email">Enter a valid email address</string>
    <string name="check_gender">Please select your gender</string>

</resources>