<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:padding="25dp">

                <TextView
                    android:id="@+id/new_contact_textViewID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/new_contact"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/firstNameEditTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/new_contact_textViewID"
                    android:layout_marginTop="39dp"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/lastNameEditTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/firstNameEditTextID"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <Spinner
                    android:id="@+id/countrySpinnerID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lastNameEditTextID"
                    android:layout_marginTop="40dp" />

                <EditText
                    android:id="@+id/phoneEditTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/countrySpinnerID"
                    android:layout_marginTop="61dp"
                    android:ems="10"
                    android:hint="@string/enter_phone"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/emailEditTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phoneEditTextID"
                    android:layout_marginTop="29dp"
                    android:ems="10"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress" />

                <RadioGroup
                    android:id="@+id/genderGroupID"
                    android:layout_width="292dp"
                    android:layout_height="69dp"
                    android:layout_below="@+id/emailEditTextID"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="47dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="45dp">

                    <LinearLayout
                        android:layout_width="265dp"
                        android:layout_height="65dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/maleRadioButtonID"
                            android:layout_width="128dp"
                            android:layout_height="64dp"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/femaleRadioButtonID"
                            android:layout_width="wrap_content"
                            android:layout_height="62dp"
                            android:layout_weight="1"
                            android:text="@string/female" />
                    </LinearLayout>

                </RadioGroup>

                <Button
                    android:id="@+id/saveButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/genderGroupID"
                    android:layout_alignEnd="@+id/genderGroupID"
                    android:layout_marginTop="29dp"
                    android:layout_marginEnd="89dp"
                    android:text="@string/save" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>