<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width                                                    ="391dp"
        android:layout_height                                                   ="231dp"
        android:orientation                                                     ="vertical"
        app:layout_constraintBottom_toBottomOf                                  ="parent"
        app:layout_constraintEnd_toEndOf                                        ="parent"
        app:layout_constraintStart_toStartOf                                    ="parent"
        app:layout_constraintTop_toTopOf                                        ="parent">

        <androidx.cardview.widget.CardView
            android:layout_width                                                ="380dp"
            android:layout_height                                               ="match_parent">

            <RelativeLayout
                android:layout_width                                            ="392dp"
                android:layout_height                                           ="match_parent">

                <TextView
                    android:id                                                  ="@+id/delete_confirm_dialog_id"
                    android:layout_width                                        ="310dp"
                    android:layout_height                                       ="55dp"
                    android:layout_alignParentStart                             ="true"
                    android:layout_alignParentTop                               ="true"
                    android:layout_alignParentEnd                               ="true"
                    android:layout_marginStart                                  ="48dp"
                    android:layout_marginTop                                    ="43dp"
                    android:layout_marginEnd                                    ="28dp"
                    android:text                                                ="@string/confirm_dialog"
                    android:textSize                                            ="18sp"
                    android:textStyle                                           ="bold" />

                <Button
                    android:id                                                  ="@+id/cancelBtn_delete_dialog_id"
                    android:layout_width                                        ="98dp"
                    android:layout_height                                       ="wrap_content"
                    android:layout_below                                        ="@+id/delete_confirm_dialog_id"
                    android:layout_alignParentStart                             ="true"
                    android:layout_marginStart                                  ="81dp"
                    android:layout_marginTop                                    ="39dp"
                    android:text                                                ="@string/cancel" />

                <Button
                    android:id                                                  ="@+id/yesBtn_delete_dialog_id"
                    android:layout_width                                        ="98dp"
                    android:layout_height                                       ="wrap_content"
                    android:layout_below                                        ="@+id/delete_confirm_dialog_id"
                    android:layout_alignParentStart                             ="true"
                    android:layout_marginStart                                  ="214dp"
                    android:layout_marginTop                                    ="41dp"
                    android:text                                                ="@string/yes" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>